--- a/gdb/gdbserver/ChangeLog
+++ b/gdb/gdbserver/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-08  Mark Kettenis  <kettenis@gnu.org>
+
+	* mem-break.c: Remove whitespace at end of file.
+
 2003-06-28  Daniel Jacobowitz  <drow@mvista.com>
 
 	* configure.in: Check whether we need to prototype strerror.
