--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,11 @@
+2003-07-09  Mark Kettenis  <kettenis@gnu.org>
+
+	* x86-64-tdep.h (X86_64_RAX_REGNUM, X86_64_RDX_REGNUM,
+	X86_64_RDI_REGNUM, X86_64_RBP_REGNUM, X86_64_RSP_REGNUM,
+	X86_64_RIP_REGNUM, X86_64_EFLAGS_REGNUM, X86_64_ST0_REGNUM,
+	X86_64_XMM0_REGNUM, X86_64_XMM1_REGNUM): Moved here ...
+	* x86-64-tdep.c: ... from here.
+
 2003-07-09  Andreas Schwab  <schwab@suse.de>
 
 	* m68k-tdep.h (enum struct_return): Define.
