--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,8 @@
 2003-07-13  Mark Kettenis  <kettenis@gnu.org>
 
+	* x86-64-tdep.c (x86_64_store_return_value): Use an intermediate
+	buffer when storing double and float varibles into %xmm0.
+
 	* configure.host: Add x86_64-*-freebsd*.
 	* configure.tgt: Add x86_64-*-freebsd*.
 	* Makefile.in (amd64fbsd-nat.o, amd64fbsd-tdep.o): New targets.
