--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-15  Michael Chastain  <mec@shout.net>
+
+	* gdb.base/gdb1250.exp: New file.
+	* gdb.base/gdb1250.c: New file.
+
 2003-07-09  Michal Ludvig  <mludvig@suse.cz>
 
 	* gdb.c++/templates.exp (test_ptype_of_templates): Recognize
