2003-07-15  Andrew Cagney  <cagney@redhat.com>
	* frame.c (get_prev_frame): Move disabled inside_entry_func to
	before code inhibiting repeated unwind attempts.  Add to
	commentary on that test's problems.
	* blockframe.c (inside_main_func): Look for "main" in the minimal
	symbol table.
	* d10v-tdep.c (d10v_frame_this_id): Delete check that frames are
	identical.

Index: testsuite/ChangeLog
2003-07-15  Andrew Cagney  <cagney@redhat.com>

	* gdb.asm/asm-source.exp: Do not allow "start" in the backtrace.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,15 @@
 2003-07-15  Andrew Cagney  <cagney@redhat.com>
 
+	* frame.c (get_prev_frame): Move disabled inside_entry_func to
+	before code inhibiting repeated unwind attempts.  Add to
+	commentary on that test's problems.
+	* blockframe.c (inside_main_func): Look for "main" in the minimal
+	symbol table.
+	* d10v-tdep.c (d10v_frame_this_id): Delete check that frames are
+	identical.
+
+2003-07-15  Andrew Cagney  <cagney@redhat.com>
+
 	* complaints.c (struct explanation): Define.
 	(struct complaints): Change type of "explanation" to "struct
 	explanation".
