--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-15  Andrew Cagney  <cagney@redhat.com>
+
+	* gdb.asm/asm-source.exp: Do not allow "start" in the backtrace.
+
 2003-07-15  Michael Chastain  <mec@shout.net>
 
 	* gdb.base/gdb1250.exp: New file.
