--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,59 @@
+2003-07-16  Andrew Cagney  <cagney@redhat.com>
+
+	* frame-base.h (frame_base_p_ftype): Delete definition.
+	(frame_base_append_predicate): Delete declaration.
+	* frame-unwind.h (frame_unwind_p_ftype): Delete definition.
+	(frame_unwind_append_predicate): Delete declaration.
+	* frame-unwind.c (struct frame_unwind_table): Delete field "p".
+	(append_predicate): Delete parameter "p".
+	(frame_unwind_append_predicate): Delete function.
+	(frame_unwind_append_sniffer): Update call to append_predicate.
+	(frame_unwind_free): Delete function.
+	(_initialize_frame_unwind): Pass NULL as "free" to
+	register_gdbarch_data.
+	(frame_unwind_init): Append the dummy_frame_sniffer.
+	(frame_unwind_find_by_frame): Simplify.
+	* frame-base.c (struct frame_base_table): Delete field "p".
+	(append_predicate): Delete parameter "p".
+	(frame_base_append_predicate): Delete function.
+	(frame_base_append_sniffer): Update call to append_predicate.
+	(frame_base_free): Delete function.
+	(frame_base_find_by_frame): Simplify.
+	(_initialize_frame_base): Pass NULL as "free" to
+	register_gdbarch_data.
+	* x86-64-tdep.c (x86_64_frame_sniffer): Replace "x86_64_frame_p".
+	(x86_64_sigtramp_frame_sniffer): Replace
+	"x86_64_sigtramp_frame_p".
+	(x86_64_init_abi): Set the frame unwind sniffers.
+	* m68k-tdep.c (m68k_frame_sniffer): Replace "m68k_frame_p".
+	(m68k_sigtramp_frame_sniffer): Replace "m68k_sigtramp_frame_p"
+	(m68k_gdbarch_init): Set the frame unwind sniffers.
+	* i386-tdep.c (i386_sigtramp_frame_sniffer): Replace
+	"i386_sigtramp_frame_p".
+	(i386_frame_sniffer): Replace "i386_frame_p".
+	(i386_gdbarch_init): Set the frame unwind sniffers.
+	* avr-tdep.c (avr_frame_sniffer): Replace "avr_frame_sniffer".
+	(avr_gdbarch_init): Set the frame unwind sniffers.
+	* alpha-tdep.c (alpha_sigtramp_frame_sniffer): Replace
+	"alpha_sigtramp_frame_p"
+	(alpha_heuristic_frame_sniffer): Replace
+	"alpha_heuristic_frame_p".
+	(alpha_gdbarch_init): Set the frame unwind sniffers.
+	(alpha_dwarf2_init_abi): Ditto.
+	* alpha-mdebug-tdep.c (alpha_mdebug_frame_sniffer): Replace
+	"alpha_debug_frame_p".
+	(alpha_mdebug_frame_base_sniffer): Replace
+	"alpha_mdebug_frame_base_p".
+	(alpha_mdebug_init_abi): Set the frame unwind sniffers.
+	* d10v-tdep.c (d10v_frame_sniffer): Replace "d10v_frame_p".
+	(d10v_gdbarch_init): Set the frame unwind sniffer.
+	* dwarf2-frame.c (dwarf2_frame_sniffer): Replace "dwarf2_frame_p".
+	(dwarf2_frame_base_sniffer): Replace "dwarf2_frame_base_p".
+	* dwarf2-frame.h (dwarf2_frame_sniffer): Replace "dwarf2_frame_p".
+	(dwarf2_frame_base_sniffer): Replace "dwarf2_frame_base_p".
+	* dummy-frame.c (dummy_frame_sniffer): Replace "dummy_frame_p".
+	* dummy-frame.h (dummy_frame_sniffer): Replace "dummy_frame_p".
+
 2003-07-16  Michael Snyder  <msnyder@redhat.com>
 
 	* sh-tdep.c (sh_gdbarch_init): Fetch_registers for the sh3-dsp
