--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,11 @@
+2003-07-17  Andrew Cagney  <cagney@redhat.com>
+
+	* defs.h (GDB_MULTI_ARCH): Delete conditional define.  Handled by
+	configure.
+	* sparc-tdep.c (sparc_intreg_size): Make non-static.
+	* config/sparc/tm-sparc.h (GDB_MULTI_ARCH): Define to
+	GDB_MULTI_ARCH_PARTIAL.
+
 2003-07-17  Elena Zannoni  <ezannoni@redhat.com>
 
 	* Makefile.in (x86-64-linux-nat.o): Update dependencies.
