2003-07-17  Michael Snyder  <msnyder@redhat.com>
        * compile.c (decode): IMM16 is always zero-extended.

--- a/sim/h8300/ChangeLog
+++ b/sim/h8300/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-17  Michael Snyder  <msnyder@redhat.com>
+
+	* compile.c (decode): IMM16 is always zero-extended.
+
 2003-06-24  Michael Snyder  <msnyder@redhat.com>
 
 	* sim-main.h (SIM_WIFSTOPPED, SIM_WSTOPSIG): Define.
