2003-07-17  Michael Snyder  <msnyder@redhat.com>
        * compile.c (sim_resume): Handle shll reg, reg and shlr reg, reg.

--- a/sim/h8300/ChangeLog
+++ b/sim/h8300/ChangeLog
@@ -1,6 +1,8 @@
 2003-07-17  Michael Snyder  <msnyder@redhat.com>
 
-	* compile.c (decode): IMM16 is always zero-extended.
+	* compile.c (sim_resume): Handle shll reg, reg and shlr reg, reg.
+	(decode): IMM16 is always zero-extended.
+	
 
 2003-06-24  Michael Snyder  <msnyder@redhat.com>
 
