--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2003-07-18  Andrew Cagney  <cagney@redhat.com>
 
+	* dwarf2-frame.c (dwarf2_frame_sniffer): Use
+	frame_unwind_address_in_block, instead of frame_pc_unwind.
+	(dwarf2_frame_cache): Ditto.
+
+2003-07-18  Andrew Cagney  <cagney@redhat.com>
+
 	* user-regs.h (struct gdbarch): Declare opaque.
 	* ui-out.h (struct ui_file): Declare opaque.
 	* dwarf2-frame.h (struct frame_info): Declare opaque.
