--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-20  Andreas Schwab  <schwab@suse.de>
+
+	* gdb.base/selftest.exp (do_steps_and_nexts): Add more patterns
+	due to insn reordering.
+
 2003-07-15  Andrew Cagney  <cagney@redhat.com>
 
 	* gdb.asm/asm-source.exp: Do not allow "start" in the backtrace.
