--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-21  Andrew Cagney  <cagney@redhat.com>
+
+	From 2003-07-04 Kei Sakamoto <sakamoto.kei@renesas.com>:
+	* m32r-tdep.c, m32r-stub.c, m32r-tdep.c: Rewrite.
+
 2003-07-20  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* m68hc11-tdep.c (m68hc11_pseudo_register_read): Use 
