--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,10 @@
+2003-07-22  Michael Snyder  <msnyder@redhat.com>
+
+	* h8300-tdep.c (h8300_extract_return_value): Teach it how to
+	handle 8-bit returns (long long).
+	(h8300h_extract_return_value): Ditto.
+	(h8300_gdbarch_init): Long long is 8 bytes, char is unsigned.
+
 2003-07-22  Andrew Cagney  <cagney@redhat.com>
 
 	* gdbarch.c Include "gdb_obstack.h".
