--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,32 @@
+2003-07-23  Michael Snyder  <msnyder@redhat.com>
+
+	* gdb.disasm/t01_mov.s: New file, h8300sx disassembly tests.
+	* gdb.disasm/t01_mov.exp: Ditto.
+	* gdb.disasm/t02_mova.s: Ditto.
+	* gdb.disasm/t02_mova.exp: Ditto.
+	* gdb.disasm/t03_add.s: Ditto.
+	* gdb.disasm/t03_add.exp: Ditto.
+	* gdb.disasm/t04_sub.s: Ditto.
+	* gdb.disasm/t04_sub.exp: Ditto.
+	* gdb.disasm/t05_cmp.s: Ditto.
+	* gdb.disasm/t05_cmp.exp: Ditto.
+	* gdb.disasm/t06_ari2.s: Ditto.
+	* gdb.disasm/t06_ari2.exp: Ditto.
+	* gdb.disasm/t07_ari3.s: Ditto.
+	* gdb.disasm/t07_ari3.exp: Ditto.
+	* gdb.disasm/t08_or.s: Ditto.
+	* gdb.disasm/t08_or.exp: Ditto.
+	* gdb.disasm/t09_xor.s: Ditto.
+	* gdb.disasm/t09_xor.exp: Ditto.
+	* gdb.disasm/t10_and.s: Ditto.
+	* gdb.disasm/t10_and.exp: Ditto.
+	* gdb.disasm/t11_logs.s: Ditto.
+	* gdb.disasm/t11_logs.exp: Ditto.
+	* gdb.disasm/t12_bit.s: Ditto.
+	* gdb.disasm/t12_bit.exp: Ditto.
+	* gdb.disasm/t13_otr.s: Ditto.
+	* gdb.disasm/t13_otr.exp: Ditto.
+
 2003-07-22  Elena Zannoni  <ezannoni@redhat.com>
 
 	* gdb.threads/tls.exp :Add kfail for 'info address' case.
