--- a/sim/testsuite/sim/sh/ChangeLog
+++ b/sim/testsuite/sim/sh/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-23  Michael Snyder  <msnyder@redhat.com>
+
+	* pmuls.s: New file.
+
 2003-07-08  Michael Snyder  <msnyder@redhat.com>
 
 	* allinsn.exp, testutils.inc, add.s, fabs.s, fadd.s, fcmpeq.s,
