--- a/gdb/doc/ChangeLog
+++ b/gdb/doc/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-24  Daniel Jacobowitz  <drow@mvista.com>
+
+	* gdb.texinfo (Server): Mention pidof.
+
 2003-07-22  Andrew Cagney  <cagney@redhat.com>
 
 	* gdbint.texinfo (Coding): Add -Wformat-nonliteral to -Werror
