--- a/gdb/gdbserver/ChangeLog
+++ b/gdb/gdbserver/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-24  Daniel Jacobowitz  <drow@mvista.com>
+
+	* linux-arm-low.c (arm_reinsert_addr): New function.
+	(the_low_target): Add arm_reinsert_addr.
+
 2003-07-08  Mark Kettenis  <kettenis@gnu.org>
 
 	* mem-break.c: Remove whitespace at end of file.
