--- a/gdb/doc/ChangeLog
+++ b/gdb/doc/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-26  Stephane Carrez  <stcarrez@nerim.fr>
+
+	* gdb.texinfo (TUI Keys): Document C-x o key to switch active window.
+
 2003-07-24  Daniel Jacobowitz  <drow@mvista.com>
 
 	* gdbint.texinfo (libgdb components): Correct a GDB to GDBN.
